Fix comment typo

--- a/docs/latex/d5/dac/structfile__s.tex
+++ b/docs/latex/d5/dac/structfile__s.tex
@@ -11,7 +11,8 @@ Data used to work with files.
 
 
 
-Collaboration diagram for file\+\_\+s\+:\nopagebreak
+Collaboration diagram for file\+\_\+s\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
