--- a/docs/latex/d9/d49/types_8h.tex
+++ b/docs/latex/d9/d49/types_8h.tex
@@ -19,9 +19,9 @@ This graph shows which files directly or indirectly include this file\+:\nopageb
 \begin{DoxyCompactItemize}
 \item 
 typedef unsigned char \mbox{\hyperlink{types_8h_ad40767aaeb0833664755ddfb1628be6c}{ubyte\+\_\+t}}
-\item 
+\begin{DoxyCompactList}\small\item\em unsigned byte data type \end{DoxyCompactList}\item 
 typedef uint64\+\_\+t \mbox{\hyperlink{types_8h_a65862077c6f78c4c2e7343cff341b6f6}{ulong\+\_\+t}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em unsigned long integer data type \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Typedef Documentation}
@@ -31,9 +31,17 @@ typedef uint64\+\_\+t \mbox{\hyperlink{types_8h_a65862077c6f78c4c2e7343cff341b6f
 \doxysubsubsection{\texorpdfstring{ubyte\_t}{ubyte\_t}}
 {\footnotesize\ttfamily typedef unsigned char \mbox{\hyperlink{types_8h_ad40767aaeb0833664755ddfb1628be6c}{ubyte\+\_\+t}}}
 
+
+
+unsigned byte data type 
+
 \mbox{\Hypertarget{types_8h_a65862077c6f78c4c2e7343cff341b6f6}\label{types_8h_a65862077c6f78c4c2e7343cff341b6f6}} 
 \index{types.h@{types.h}!ulong\_t@{ulong\_t}}
 \index{ulong\_t@{ulong\_t}!types.h@{types.h}}
 \doxysubsubsection{\texorpdfstring{ulong\_t}{ulong\_t}}
 {\footnotesize\ttfamily typedef uint64\+\_\+t \mbox{\hyperlink{types_8h_a65862077c6f78c4c2e7343cff341b6f6}{ulong\+\_\+t}}}
+
+
+
+unsigned long integer data type 
 
