--- a/docs/latex/da/d23/list_8h.tex
+++ b/docs/latex/da/d23/list_8h.tex
@@ -13,12 +13,12 @@ Include dependency graph for list.\+h\+:\nopagebreak
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structnode__s}{node\+\_\+s}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Double linked list node. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Typedefs}
 \begin{DoxyCompactItemize}
 \item 
 typedef struct \mbox{\hyperlink{structnode__s}{node\+\_\+s}} \mbox{\hyperlink{list_8h_ade8921e42609f610cd71a72af43ade2c}{node\+\_\+t}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Double linked list node. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -58,6 +58,10 @@ void \mbox{\hyperlink{list_8h_aac033e2d72c2d370c54e130741e63f86}{list\+\_\+free}
 \index{node\_t@{node\_t}!list.h@{list.h}}
 \doxysubsubsection{\texorpdfstring{node\_t}{node\_t}}
 {\footnotesize\ttfamily typedef struct \mbox{\hyperlink{structnode__s}{node\+\_\+s}}  \mbox{\hyperlink{list_8h_ade8921e42609f610cd71a72af43ade2c}{node\+\_\+t}}}
+
+
+
+Double linked list node. 
 
 
 
