--- a/docs/latex/dc/d18/memory_8h.tex
+++ b/docs/latex/dc/d18/memory_8h.tex
@@ -27,7 +27,7 @@ This graph shows which files directly or indirectly include this file\+:\nopageb
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structdata__s}{data\+\_\+s}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Memory allocation data. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Macros}
 \begin{DoxyCompactItemize}
 \item 
@@ -37,7 +37,7 @@ struct \mbox{\hyperlink{structdata__s}{data\+\_\+s}}
 \begin{DoxyCompactItemize}
 \item 
 typedef struct \mbox{\hyperlink{structdata__s}{data\+\_\+s}} \mbox{\hyperlink{memory_8h_a92a0a4edea422da0a8b5e6aa3556f1a6}{data\+\_\+t}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Memory allocation data. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -75,6 +75,10 @@ void \mbox{\hyperlink{memory_8h_adf173fc1b14ccfa90ed773172f7c0635}{memory\+\_\+s
 
 
 
+Memory allocation data. 
+
+
+
 \doxysubsection{Function Documentation}
 \mbox{\Hypertarget{memory_8h_a8c661e5e837dd10fbd4fcea2a2d42066}\label{memory_8h_a8c661e5e837dd10fbd4fcea2a2d42066}} 
 \index{memory.h@{memory.h}!data\_alloc@{data\_alloc}}
@@ -92,7 +96,7 @@ Allocate a block of data.
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-bool wheter or not data was allocated 
+bool whether or not data was allocated 
 \end{DoxyReturn}
 \mbox{\Hypertarget{memory_8h_ac60b5a5e2e8bc333d45243a5e845bb8b}\label{memory_8h_ac60b5a5e2e8bc333d45243a5e845bb8b}} 
 \index{memory.h@{memory.h}!data\_copy@{data\_copy}}
@@ -112,7 +116,7 @@ Copy a block of data to another.
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-bool wheter or not data was copied 
+bool whether or not data was copied 
 \end{DoxyReturn}
 \mbox{\Hypertarget{memory_8h_a371b0d448690a5c9d33fb509f699ab86}\label{memory_8h_a371b0d448690a5c9d33fb509f699ab86}} 
 \index{memory.h@{memory.h}!data\_free@{data\_free}}
