--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -1,6 +1,6 @@
 \doxysection{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{structdata__s}{data\+\_\+s}} }{\pageref{structdata__s}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structdata__s}{data\+\_\+s}} \\*Memory allocation data }{\pageref{structdata__s}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structfile__s}{file\+\_\+s}} \\*Data used to work with files }{\pageref{structfile__s}}{}
-\item\contentsline{section}{\mbox{\hyperlink{structnode__s}{node\+\_\+s}} }{\pageref{structnode__s}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structnode__s}{node\+\_\+s}} \\*Double linked list node }{\pageref{structnode__s}}{}
 \end{DoxyCompactList}
