--- a/docs/latex/d1/d01/structdata__s.tex
+++ b/docs/latex/d1/d01/structdata__s.tex
@@ -2,16 +2,24 @@
 \label{structdata__s}\index{data\_s@{data\_s}}
 
 
+Memory allocation data.  
+
+
+
+
 {\ttfamily \#include $<$memory.\+h$>$}
 
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
 size\+\_\+t \mbox{\hyperlink{structdata__s_a38789a4aadbcec5cd2e264886ce10f58}{size}}
-\item 
+\begin{DoxyCompactList}\small\item\em buffer size \end{DoxyCompactList}\item 
 \mbox{\hyperlink{types_8h_ad40767aaeb0833664755ddfb1628be6c}{ubyte\+\_\+t}} $\ast$ \mbox{\hyperlink{structdata__s_a97d73a228db5832ba4d31fc1fd440d45}{address}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em data location \end{DoxyCompactList}\end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Memory allocation data. 
 
 \doxysubsection{Member Data Documentation}
 \mbox{\Hypertarget{structdata__s_a97d73a228db5832ba4d31fc1fd440d45}\label{structdata__s_a97d73a228db5832ba4d31fc1fd440d45}} 
@@ -20,11 +28,19 @@ size\+\_\+t \mbox{\hyperlink{structdata__s_a38789a4aadbcec5cd2e264886ce10f58}{si
 \doxysubsubsection{\texorpdfstring{address}{address}}
 {\footnotesize\ttfamily \mbox{\hyperlink{types_8h_ad40767aaeb0833664755ddfb1628be6c}{ubyte\+\_\+t}}$\ast$ data\+\_\+s\+::address}
 
+
+
+data location 
+
 \mbox{\Hypertarget{structdata__s_a38789a4aadbcec5cd2e264886ce10f58}\label{structdata__s_a38789a4aadbcec5cd2e264886ce10f58}} 
 \index{data\_s@{data\_s}!size@{size}}
 \index{size@{size}!data\_s@{data\_s}}
 \doxysubsubsection{\texorpdfstring{size}{size}}
 {\footnotesize\ttfamily size\+\_\+t data\+\_\+s\+::size}
+
+
+
+buffer size 
 
 
 
