--- a/docs/latex/db/d9b/structnode__s.tex
+++ b/docs/latex/db/d9b/structnode__s.tex
@@ -2,11 +2,17 @@
 \label{structnode__s}\index{node\_s@{node\_s}}
 
 
+Double linked list node.  
+
+
+
+
 {\ttfamily \#include $<$list.\+h$>$}
 
 
 
-Collaboration diagram for node\+\_\+s\+:\nopagebreak
+Collaboration diagram for node\+\_\+s\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -17,12 +23,15 @@ Collaboration diagram for node\+\_\+s\+:\nopagebreak
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\hyperlink{memory_8h_a92a0a4edea422da0a8b5e6aa3556f1a6}{data\+\_\+t}} \mbox{\hyperlink{structnode__s_ac9b566fb3abe47dfcf1ff0b9877fb30f}{data}}
-\item 
+\begin{DoxyCompactList}\small\item\em data stored by the node \end{DoxyCompactList}\item 
 struct \mbox{\hyperlink{structnode__s}{node\+\_\+s}} $\ast$ \mbox{\hyperlink{structnode__s_ab7d82954072593d1172c02f90dc847be}{prev}}
-\item 
+\begin{DoxyCompactList}\small\item\em previous node on the list \end{DoxyCompactList}\item 
 struct \mbox{\hyperlink{structnode__s}{node\+\_\+s}} $\ast$ \mbox{\hyperlink{structnode__s_a54a59fb31e75eddffc692ba0bc5e5dc9}{next}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em next node on the list \end{DoxyCompactList}\end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Double linked list node. 
 
 \doxysubsection{Member Data Documentation}
 \mbox{\Hypertarget{structnode__s_ac9b566fb3abe47dfcf1ff0b9877fb30f}\label{structnode__s_ac9b566fb3abe47dfcf1ff0b9877fb30f}} 
@@ -31,17 +40,29 @@ struct \mbox{\hyperlink{structnode__s}{node\+\_\+s}} $\ast$ \mbox{\hyperlink{str
 \doxysubsubsection{\texorpdfstring{data}{data}}
 {\footnotesize\ttfamily \mbox{\hyperlink{memory_8h_a92a0a4edea422da0a8b5e6aa3556f1a6}{data\+\_\+t}} node\+\_\+s\+::data}
 
+
+
+data stored by the node 
+
 \mbox{\Hypertarget{structnode__s_a54a59fb31e75eddffc692ba0bc5e5dc9}\label{structnode__s_a54a59fb31e75eddffc692ba0bc5e5dc9}} 
 \index{node\_s@{node\_s}!next@{next}}
 \index{next@{next}!node\_s@{node\_s}}
 \doxysubsubsection{\texorpdfstring{next}{next}}
 {\footnotesize\ttfamily struct \mbox{\hyperlink{structnode__s}{node\+\_\+s}}$\ast$ node\+\_\+s\+::next}
 
+
+
+next node on the list 
+
 \mbox{\Hypertarget{structnode__s_ab7d82954072593d1172c02f90dc847be}\label{structnode__s_ab7d82954072593d1172c02f90dc847be}} 
 \index{node\_s@{node\_s}!prev@{prev}}
 \index{prev@{prev}!node\_s@{node\_s}}
 \doxysubsubsection{\texorpdfstring{prev}{prev}}
 {\footnotesize\ttfamily struct \mbox{\hyperlink{structnode__s}{node\+\_\+s}}$\ast$ node\+\_\+s\+::prev}
+
+
+
+previous node on the list 
 
 
 
