--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -178,6 +178,7 @@
 \chapter{Class Documentation}
 \input{d1/d01/structdata__s}
 \input{d5/dac/structfile__s}
+\input{da/d7b/structimage__s}
 \input{db/d9b/structnode__s}
 \chapter{File Documentation}
 \input{d2/d4d/file_8h}
