--- a/docs/latex/da/d23/list_8h.tex
+++ b/docs/latex/da/d23/list_8h.tex
@@ -2,13 +2,8 @@
 \label{list_8h}\index{include/list.h@{include/list.h}}
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include \char`\"{}memory.\+h\char`\"{}}\newline
-Include dependency graph for list.\+h\+:\nopagebreak
-\begin{figure}[H]
-\begin{center}
-\leavevmode
-\includegraphics[width=350pt]{d0/deb/list_8h__incl}
-\end{center}
-\end{figure}
+Include dependency graph for list.\+h\+:
+% FIG 0
 \doxysubsection*{Classes}
 \begin{DoxyCompactItemize}
 \item 
